--- a/src/app/features/desk-attendant-layout/desk-attendant-layout.component.html
+++ b/src/app/features/desk-attendant-layout/desk-attendant-layout.component.html
@@ -4,6 +4,7 @@
 
   <!-- Main Content -->
   <div class="flex-1 overflow-auto bg-gray-100">
+    <app-header > </app-header>
     <router-outlet></router-outlet>
   </div>
 </div>
