--- a/src/app/features/admin-layout/admin-layout.component.html
+++ b/src/app/features/admin-layout/admin-layout.component.html
@@ -6,7 +6,8 @@
 
   <div *ngIf="isLoading" class="h-full w-full cursor-wait bg-white overflow-hidden absolute z-10 flex flex-col justify-center items-center ">
     <app-lottie-animation class="w-96 h-96 animate-pop" animation="loader"></app-lottie-animation>
-    <div class="tracking-wider text-xl animate-bounce animate-pop">Please Wait</div>
+    <div *ngIf="!showUploadProgress()" class="tracking-wider text-xl animate-bounce animate-pop">Please Wait</div>
+    <div *ngIf="showUploadProgress()" class="tracking-wider text-xl animate-bounce animate-pop">Uploading File ... ({{showUploadProgress()}})%</div>
   </div>
   <!-- Main Content -->
   <div class="flex-1 flex flex-col overflow-auto bg-gray-100">
