--- a/src/app/features/desk-attendant-layout/desk-attendant-layout.component.html
+++ b/src/app/features/desk-attendant-layout/desk-attendant-layout.component.html
@@ -1,10 +1,20 @@
-<div class="h-screen w-screen flex overflow-hidden">
+
+
+<div class="h-screen w-screen flex overflow-hidden relative">
   <!-- Sidebar -->
   <app-sidebar [role]="role"></app-sidebar>
 
+  <div *ngIf="isLoading" class="h-full w-full cursor-wait bg-white overflow-hidden absolute z-10 flex flex-col justify-center items-center ">
+    <app-lottie-animation class="w-96 h-96 animate-pop" animation="loader"></app-lottie-animation>
+    <div  class="tracking-wider text-xl animate-bounce animate-pop">Please Wait</div>
+  </div>
   <!-- Main Content -->
-  <div class="flex-1 overflow-auto bg-gray-100">
+  <div class="flex-1 flex flex-col overflow-auto bg-gray-100">
+
     <app-header > </app-header>
-    <router-outlet></router-outlet>
+    <div class="w-full flex-1 py-6 px-6 2xl:px-14">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
+
